# python-module-jk-argparsing

./: .gitignore  HISTORY.md  README.md  TODO.md  packageinfo.json  packageinfo.jsonc  pyproject.toml
documentation/: Bash Completion.md  Help Text Generation.md
documentation/API/: ArgCommand.md  ArgOption.md  ArgsParser.md  ParsedArgs.md
examples/: example-basic.py  example-complex.py  example-minimal.py  example-with-logging-and-help.py  example.py  example1.py  test.py
notes/: TODO.md
src/: HISTORY.rst  MANIFEST.in  README.html  README.md  README.rst  pyproject.toml  setup.py
src/jk_argparsing/: ArgCommand.py  ArgItemBase.py  ArgOption.py  ArgUtils.py  ArgsOptionDataDict.py  ArgsParser.py  AvailableLicenseList.py  BashCompletionLocal.py  EnumParameterType.py  LicenseInfo.py  NoSuchCommandException.py  OptionParameter.py  ParsedArgs.py  _DescrChapter.py  _DescrPargraph.py  __init__.py
src/jk_argparsing/ex/: __init__.py
src/jk_argparsing/helptext/: AuthorTuple.py  ConsoleHelpTextBuilder.py  EnvVarTuple.py  HelpTextSrcData.py  IHelpTextBuilder.py  ReturnCodeTuple.py  VisSettings.py  __init__.py
src/jk_argparsing/impl/: HelpTextBuilder.py  HelpTextData.py  ImplementationErrorException.py  __init__.py
src/jk_argparsing/textmodel/: TBlock.py  TList.py  TSection.py  VisSettings.py  __init__.py
src/jk_argparsing/textprimitives/: ITextBlock.py  TextBlock.py  TextBlockSequence.py  TextColumnsBlock.py  TextEmpty.py  TextGridBlock.py  TextPrefixBlock.py  XLineFragment.py  __init__.py  columnLayouterL2R.py
testing/: 01_test_helpTextFormatting.py  10_test_parsing.py  11_test_parsing_noCommands.py  12_test_parsing_invalidCmd.py  test.py  test_helpTextFormatting.py  test_parsing.py  test_parsing_noCommands.py
